Update sign in new.html

--- a/sign in new.html
+++ b/sign in new.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #F5F5F5; /* light grey background */
+            background-color: #FEFFFF; /* GhostWhite */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,17 +16,17 @@
         }
 
         .container {
-            background-color: #FFFFFF; /* white container */
+            background-color: #17252A; /* Charleston Green */
             padding: 30px;
             border-radius: 10px;
             width: 400px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         h1 {
             margin-bottom: 20px;
-            color: #FF6F61; /* coral color */
+            color: #3EF2F1; /* Pale Teal */
         }
 
         input[type="text"], input[type="email"], input[type="password"] {
@@ -35,14 +35,19 @@
             margin: 10px 0;
             border: none;
             border-radius: 25px;
-            background-color: #D3D3D3; /* grey for inputs */
+            background-color: #3AAFA9; /* Medium Teal */
+            color: white;
             font-size: 16px;
+        }
+
+        input::placeholder {
+            color: #FEFFFF; /* GhostWhite for placeholder text */
         }
 
         button {
             width: 100%;
             padding: 15px;
-            background-color: #FFB74D; /* orange-yellow button */
+            background-color: #2B7A78; /* Deep Tail */
             border: none;
             border-radius: 25px;
             font-size: 18px;
@@ -54,18 +59,18 @@
 
         .or {
             margin: 10px 0;
-            color: #A7A7A7;
+            color: #FEFFFF; /* GhostWhite */
         }
 
         .google-button {
             width: 100%;
             padding: 15px;
-            background-color: #4CAF50; /* green for Google button */
+            background-color: #3AAFA9; /* Medium Teal */
             border: none;
             border-radius: 25px;
             font-size: 16px;
             font-weight: bold;
-            color: white;
+            color: #FEFFFF; /* GhostWhite */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -80,11 +85,11 @@
         .login-link {
             margin-top: 20px;
             font-size: 14px;
-            color: #607D8B; /* greyish-blue link */
+            color: #3EF2F1; /* Pale Teal */
         }
 
         .login-link a {
-            color: #607D8B;
+            color: #3EF2F1;
             text-decoration: none;
         }
     </style>
@@ -109,5 +114,6 @@
 
 </body>
 </html>
+
 
 
