--- a/Guider new.html
+++ b/Guider new.html
@@ -61,7 +61,14 @@
 
         <!-- Main Dashboard Content -->
         <main>
-            <!-- Add your main dashboard content here -->
+            <div class="dashboard">
+                <div class="card">Total Bookings</div>
+                <div class="card">Managing Bookings</div>
+                <div class="card">Updating the availability</div>
+                <div class="card">Responds to bookings</div>
+                <div class="card">View of the payments</div>
+                <div class="card">Rate management</div>
+            </div>
         </main>
     </div>
 
