--- a/Guider new.html
+++ b/Guider new.html
@@ -26,52 +26,45 @@
             <li><a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="m363-390 117-71 117 71-31-133 104-90-137-11-53-126-53 126-137 11 104 90-31 133ZM80-80v-720q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v480q0 33-23.5 56.5T800-240H240L80-80Zm126-240h594v-480H160v525l46-45Zm-46 0v-480 480Z"/></svg> Reviews</a></li>
             <li><a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg> Notifications</a></li>
+            <li><a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"/></svg> My Profile</a></li>
         </ul>
         <a href="#" class="logout">
-            <span>Log out</span>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z"/></svg> Log Out
         </a>
     </div>
+    <!-- End of Sidebar -->
 
     <!-- Main Content -->
-    <main>
-        <div class="dashboard">
-            <!-- Existing cards -->
-            <div class="card">
-                <h3>Orders Completed</h3>
-                <p>125</p>
-            </div>
-            <div class="card">
-                <h3>Pending Orders</h3>
-                <p>15</p>
-            </div>
-            <div class="card">
-                <h3>Revenue</h3>
-                <p>$12,345</p>
-            </div>
-            <div class="card">
-                <h3>Customers</h3>
-                <p>1200</p>
-            </div>
-            <div class="card">
-                <h3>New Customers</h3>
-                <p>35</p>
-            </div>
-            <div class="card">
-                <h3>Reviews</h3>
-                <p>98</p>
-            </div>
+    <div class="content">
+        <!-- Navbar -->
+        <nav>
+            <svg class="menu" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M160-269.23v-40h640v40H160ZM160-460v-40h640v40H160Zm0-190.77v-40h640v40H160Z"/></svg>
+            <form action="#">
+                <div class="form-input">
+                    <input type="search" placeholder="Search ..">
+                    <button class="search-btn" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+                    </button>
+                </div>
+            </form>
+            <a href="#" class="updates">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/></svg>
+                <span class="count">12</span>
+            </a>
+            <a href="#" class="profile">
+                <img src="/api/placeholder/32/32" alt="Profile Picture">
+            </a>
+        </nav>
+        <!-- End of Navbar -->
 
-            <div class="card">Total Bookings</div>
-            <div class="card">Managing Bookings</div>
-            <div class="card">Updating the availability</div>
-            <div class="card">Responds to bookings</div>
-            <div class="card">View of the payments</div>
-            <div class="card">Rate management</div>
-        </div>
-    </main>
+        <!-- Main Dashboard Content -->
+        <main>
+            <!-- Add your main dashboard content here -->
+        </main>
+    </div>
+
+    <script src="JS Scripts/Sidebar.js"></script>
 </body>
 </html>
-
-
-
